# emp-pro

./: .env.example  .gitignore  README.md  main.py  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
artifacts/emp-pro/: index.html  package.json  tsconfig.json  vite.config.ts
artifacts/emp-pro/src/: App.tsx  index.css
artifacts/emp-pro/src/components/: auth-provider.tsx  layout.tsx  theme-provider.tsx
artifacts/emp-pro/src/lib/: auth.ts
artifacts/emp-pro/src/pages/: analytics.tsx  attendance.tsx  dashboard.tsx  departments.tsx  employee-detail.tsx  employees.tsx  login.tsx  notifications.tsx  performance.tsx  project-detail.tsx  projects.tsx  settings.tsx  tasks.tsx  timesheets.tsx
artifacts/fastapi-backend/: main.py  requirements.txt  seed.py
artifacts/fastapi-backend/app/: main.py
artifacts/fastapi-backend/app/core/: config.py  database.py  security.py
artifacts/fastapi-backend/app/models/: __init__.py  attendance.py  department.py  employee.py  notification.py  performance.py  project.py  task.py  timesheet.py
artifacts/fastapi-backend/app/routers/: analytics.py  attendance.py  auth.py  departments.py  employees.py  notifications.py  performance.py  projects.py  tasks.py  timesheets.py
artifacts/fastapi-backend/app/schemas/: analytics.py  attendance.py  auth.py  department.py  employee.py  notification.py  performance.py  project.py  task.py  timesheet.py
attached_assets/: Employee_Management_System_UI_1780905596712.make
lib/api-client-react/src/: custom-fetch.ts
lib/api-spec/: openapi.yaml
